base/helm-chart-repository/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-chart-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-chart-repo
  template:
    metadata:
      name: helm-chart-repo
      labels:
        app: helm-chart-repo
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/helmchart3/helm-repo-container@sha256:501a0117ac066983d79a8b13ed193eefa31e397a84c2a85bfcbb4e58bbed001f
          name: helm-repo-container
          securityContext:
            capabilities:
              drop:
                - "ALL"
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
          ports:
            - containerPort: 8080
              name: http
