base/helm-chart-repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-repo-service
spec:
  selector: 
    app: helm-chart-repo
  type: ClusterIP  
  ports:
    - port: 8080
      targetPort: 8080
      name: 8080-tcp
