base/helm-chart-repository/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: heml-repo-route
spec:
  to:
    kind: Service
    name: helm-repo-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
